first push after a long time

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>dashboard</title>
     <!-- <link rel="stylesheet" href="../css/log-in.css"> -->
-    <link rel="stylesheet" href="../css/home.css">
+    <link rel="stylesheet" href="./css/home.css">
 </head>
 <body>
     <header >
@@ -88,19 +88,19 @@
                 <div id="home" class="side">
                     <div class="homm">
                         <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 12l2-2m0 0l7-7 7 7M5 10v10a1 1 0 001 1h3m10-11l2 2m-2-2v10a1 1 0 01-1 1h-3m-6 0a1 1 0 001-1v-4a1 1 0 011-1h2a1 1 0 011 1v4a1 1 0 001 1m-6 0h6"></path></svg>                    </div>
-                    <a href="../pages/home.html" id="hom" class="hide">dashboard</a>
+                    <a href="./pages/home.html" id="hom" class="hide">dashboard</a>
                 </div>
                 <div id="airtime" class="side">
                     <div class="ai">
                         <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 18h.01M8 21h8a2 2 0 002-2V5a2 2 0 00-2-2H8a2 2 0 00-2 2v14a2 2 0 002 2z"></path></svg>
                     </div>
-                    <a href="../airtime.html" id="air" class="hide">buy airtime</a>
+                    <a href="./airtime.html" id="air" class="hide">buy airtime</a>
                 </div>
                 <div id="data" class="side">
                     <div class="data">
                         <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 5c7.18 0 13 5.82 13 13M6 11a7 7 0 017 7m-6 0a1 1 0 11-2 0 1 1 0 012 0z"></path></svg>
                     </div>
-                    <a href="../pages/data.html" id="dat" class="hide">buy data</a>
+                    <a href="./pages/data.html" id="dat" class="hide">buy data</a>
                 </div>
                 <div id="login" class="side">
                     <div class="logi">
