--- a/index.html
+++ b/index.html
@@ -5,93 +5,40 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>dashboard</title>
-    <!-- <link rel="stylesheet" href="../css/log-in.css"> -->
+    <!-- <link rel="stylesheet" href="./css/log-in.css"> -->
     <link rel="stylesheet" href="./css/home.css">
 </head>
 <body>
     <header >
-        <nav class="nav1" id="homee" onclick="display()">
-            <div class="dot">
+        <nav class="nav1" >
+            <div class="dot" id="homee" onclick="display()">
                 <div></div>
                 <div></div>
                 <div></div>    
             </div>
             <div class="message">
                 <h3>welcome to superclone!</h3> <br>
-                <p>for any complain or retification, message our admins directly                 <a href="tel:+2348105154901">here</a></p>
+                <p>for any complain or retification, message our admins directly                
+                     <a href="tel:+2348105154901">here</a></p>
             </div>
             <div class="signout">
                 <h3><a href="">log out</a></h3>
             </div>
-            <!-- <ul>
-                <li>
-                    <a href="index.html">home</a>
-                </li>
-                <li>
-                    <a href="../pages/about.html">about</a>
-                </li>
-                <li>
-                    <a href="./">our services</a>
-                </li>
-                <li>
-                    <a href="">contact us</a>
-                </li>
-                <li>
-                    <a href="">FAQs</a>
-                </li>
-
-            </ul> -->
-             <!-- <a href="#drawer" class="menu">
-                <span></span>
-                <span></span>
-                <span></span>
-            </a>     -->
+            
             </div>
         </nav>
     </header>
-    <!-- <aside id="drawer">
-        <a href="#home" class="menu">
-            <h1><strong>X</strong></h1>
-        </a>    
-
-        <nav>
-            <ul>
-                <li>
-                    <a href="index.html">home</a>
-                </li>
-                <li>
-                    <a href="./super-clone/pages/about.html">about</a>
-                </li>
-                <li>
-                    <a href="./">our services</a>
-                </li>
-                <li>
-                    <a href="">contact us</a>
-                </li>
-                <li>
-                    <a href="">FAQs</a>
-                </li>
-                <li>
-                    <a href="./log-in.html">log in</a>
-                </li>
-                <li>
-                    <a href="./register.html">register</a>
-                </li>
-
-            </ul> 
-
-        </nav>
-    </aside> -->
+   
     <main>
         <aside id="sideNav" class="hidden">
-            <div id="sidee">
+            <div>
                 <div id="home" class="side">
                     <div class="homm">
                         <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 12l2-2m0 0l7-7 7 7M5 10v10a1 1 0 001 1h3m10-11l2 2m-2-2v10a1 1 0 01-1 1h-3m-6 0a1 1 0 001-1v-4a1 1 0 011-1h2a1 1 0 011 1v4a1 1 0 001 1m-6 0h6"></path></svg>                    </div>
-                    <a href="./pages/home.html" id="hom" class="hide">dashboard</a>
+                    <a href="./pages/home.html" id="dashboard" class="hide">dashboard</a>
                 </div>
                 <div id="airtime" class="side">
-                    <div class="ai">
+                    <div >
                         <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 18h.01M8 21h8a2 2 0 002-2V5a2 2 0 00-2-2H8a2 2 0 00-2 2v14a2 2 0 002 2z"></path></svg>
                     </div>
                     <a href="./airtime.html" id="air" class="hide">buy airtime</a>
@@ -106,19 +53,19 @@
                     <div class="logi">
                         <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M11 16l-4-4m0 0l4-4m-4 4h14m-5 4v1a3 3 0 01-3 3H6a3 3 0 01-3-3V7a3 3 0 013-3h7a3 3 0 013 3v1"></path></svg>
                     </div>
-                    <a href="../pages/log-in.html" id="log" class="hide">log in</a>
+                    <a href="./pages/log-in.html" id="log" class="hide">log in</a>
                 </div>
                 <div id="out" class="side">
                     <div class="out">
                         <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M17 16l4-4m0 0l-4-4m4 4H7m6 4v1a3 3 0 01-3 3H6a3 3 0 01-3-3V7a3 3 0 013-3h4a3 3 0 013 3v1"></path></svg>
                     </div>
-                    <a href="../pages/log-in.html" id="outt" class="hide">log out</a>
+                    <a href="./pages/log-in.html" id="outt" class="hide">log out</a>
                 </div>
                 <div id="reg" class="side">
                     <div class="log">
                         <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 7a2 2 0 012 2m4 0a6 6 0 01-7.743 5.743L11 17H9v2H7v2H4a1 1 0 01-1-1v-2.586a1 1 0 01.293-.707l5.964-5.964A6 6 0 1121 9z"></path></svg>
                     </div>
-                    <a href="../pages/register.html" id="regg" class="hide">register</a>
+                    <a href="./pages/register.html" id="regg" class="hide">register</a>
                 </div>
                 <div id="set" class="side">
                     <div class="set">
@@ -131,7 +78,7 @@
 
         <section class="sec1">
                 <div class="refferal">
-                    <p>referral link:https://superjara.com </p>
+                    <p>referral link: <a href="https://superjara.com">https://superjara.com</a> </p>
                 </div>
                 <div class="wallet">
                     <input type="button" value="fund wallet">
@@ -247,7 +194,7 @@
                 <p>FAQs:</p>
                 <span>please go through the FAQs to have a better knowledge of superclone platform.</span>
                 <div class="faq1">
-                    <a href="../faq.html" >FAQs</a>
+                    <a href="./faq.html" >FAQs</a>
                 </div>
             </div>
             <div class="faq">
@@ -274,13 +221,13 @@
             </div>
             <div class="box">
                 <div class="imag">
-                    <img src="./images/backgrounds/tocash.jpg" alt="">
+                    <img src="./images/tocash.jpg" alt="">
                 </div>
                 <a href="">data card printing</a>
             </div>
             <div class="box">
                 <div class="imag">
-                    <img src="./images/backgrounds/result.jpg" alt="">
+                    <img src="./images/result.jpg" alt="">
                 </div>
                 <a href="">result checker</a>
             </div>
@@ -343,21 +290,21 @@
                 <a href="">our services</a>
                 <div class="contact">
                 <a href="">
-                    <img src="../images/instagram.jpg" alt="instagram">
+                    <img src="./images/instagram.jpg" alt="instagram">
                 </a>
                 <a href="..">
                     <img src="./images/whatsapp.png" alt="whatsapp">
                 </a>
                 <a href="..">
-                    <img src="../images/facebook.png" alt="facebook">
+                    <img src="./images/facebook.png" alt="facebook">
                 </a>
                 <a href="..">
-                    <img src="../images/twitter.jpg" alt="twitter">
+                    <img src="./images/twitter.jpg" alt="twitter">
            </div>
     </div>
 </footer> -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-<script src="../css/script.js"></script>
+<script src="./css/script.js"></script>
 
 </body>
 </html>
